# starbug

./: .gitignore  Dockerfile  README.md  crd.yaml  deployment.yaml  example.yaml  kiroshi.yaml  pyproject.toml  renovate.json
.github/workflows/: build.yaml  ci.yaml  test.yaml
alembic/: env.py
alembic/versions/: 07bd2bb1db45_initial_database.py
scutter/: __init__.py  cli.py  main.py  settings.py
starbug/: __init__.py  api.py  azure.py  cli.py  client.py  helper.py  kube.py  loop.py  loop2.py  loop3.py  mapping.py  namegen.py  settings.py  worker.py
starbug/kube/: __init__.py  common.py  deployment.py  job.py  list.py  namespace.py  pod.py  secret.py  service.py  serviceaccount.py  utils.py
starbug/kubernetes/: __init__.py
starbug/kubernetes/custom/: __init__.py  resources.py
starbug/kubernetes/data/: __init__.py  snowstorm.py
starbug/kubernetes/devops/: kiroshi.py
starbug/kubernetes/infrastructure/: __init__.py  imagepullsecret.py  namespace.py  postgres.py  rabbitmq.py  redis.py  roles.py
starbug/kubernetes/internal/: __init__.py  crd.py  scutter.py
starbug/kubernetes/olympus/: __init__.py  angelia.py  asteria.py  atlas.py  boreas.py  callbacca.py  eos.py  europa.py  hades.py  harmonia.py  hermes.py  metis.py  midas.py  pelops.py  plutus.py  pyqa-apiv2.py  skiron.py  zephyrus.py
starbug/kubernetes/tests/: __init__.py  kiroshi.py  pytest.py
starbug/logic/: __init__.py  api.py  azure.py  exceptions.py  kubernetes.py  secrets.py
starbug/models/api/: __init__.py
starbug/models/database/: __init__.py
starbug/models/kubernetes/: __init__.py  custom_resources.py
starbug/models/kubernetes/devops/: __init__.py  kiroshi.py
starbug/models/kubernetes/infrastructure/: imagepullsecret.py  namespace.py  postgres.py  rabbitmq.py  redis.py  roles.py
starbug/models/kubernetes/olympus/: angelia.py  asteria.py  boreas.py  eos.py  europa.py  hades.py  harmonia.py  hermes.py  metis.py  midas.py  pelops.py  plutus.py  skiron.py  zephyrus.py
starbug/templates/: __init__.py  postgres.py  rabbitmq.py  redis.py
starbug/templates/devops/: __init__.py  kiroshi.py
starbug/templates/essential/: __init__.py  binkcore.py  bootstrapdb.py  postgres.py  rabbitmq.py  redis.py
starbug/templates/olympus/: __init__.py
starbug/templates/tests/: __init__.py  kiroshi.py
