[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "starbug"
version = "0.0.0"
description = "Test Automation API"
authors = ["Chris Pressland <mail@cpressland.io>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "./starbug"},
    {include = "./scutter"},
]

[tool.poetry.scripts]
starbug = "starbug.cli:cli"
scutter = "scutter.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2"
pydantic-settings = "^2"
fastapi = "^0"
click = "^8"
click-aliases = "^1"
uvicorn = "^0"
requests = "^2"
loguru = "^0"
azure-storage-blob = "^12"
azure-identity = "^1"
azure-mgmt-msi = "^7"
pendulum = "^2"
kr8s = "^0"


[tool.poetry.group.dev.dependencies]
ruff = "^0"
black = "^23"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D203", "D213", "D407", "FA102", "PERF203", "PLR0913", "S108", "S311"]
line-length = 250
